--- a/metric.ipynb
+++ b/metric.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,14 @@
     "        nfalse += (1 - y_i)\n",
     "        auc += y_i * nfalse\n",
     "    auc /= (nfalse * (n - nfalse))\n",
-    "    return auc"
+    "    return auc\n",
+    "\n",
+    "def eval_auc(y_true, y_pred):\n",
+    "    \"\"\"\n",
+    "    import lighgbm as lgb\n",
+    "    Fast auc eval function for lgb.\n",
+    "    \"\"\"\n",
+    "    return 'auc', fast_auc(y_true, y_pred), True"
    ]
   },
   {
