--- a/VIF.ipynb
+++ b/VIF.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Multicollinearity maybe a problem in regression models. Curse of Dimensionality may be big problem in ML models. When we do feature engineering, it maybe involved. One of the assumption is data which is passing in regression model it should not contain Multicollinearity. Some methods could be useful to reduce the multicollinearity.  \n",
+    "Multicollinearity maybe a problem in regression models. Curse of Dimensionality may be big problem in ML models. When we do feature engineering, it maybe involved. One of the assumption is data which is passing in regression model it should not contain Multicollinearity. Some methods could be useful to reduce or determine the multicollinearity.  \n",
     "1. Removing variables that are giving same information twice or more\n",
     "2. using VIF\n",
     "3. getting feature importance using tree_based models.\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
