--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -19,11 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_selection import RFECV"
+    "from sklearn.feature_selection import RFECV\n",
+    "\n",
+    "# we should choose a model before RFECV"
    ]
   }
  ],
