--- a/Cross-validation.ipynb
+++ b/Cross-validation.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -354,6 +354,7 @@
     "# With GroupKFold we can be sure that our validation fold will contain groupIDs that are not in main train set. \n",
     "# Sometimes it helps to deal with \"dataleakage\" and overfit.\n",
     "\n",
+    "# just a simulate\n",
     "import numpy as np\n",
     "from sklearn.model_selection import GroupKFold\n",
     "X = np.array([[1, 2], [3, 4], [5, 6], [7, 8],[9,10],[11,12]])\n",
