--- a/FM.ipynb
+++ b/FM.ipynb
@@ -1,6 +1,328 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FM算法实现（向量化）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "第0次迭代后的loss部分梯度为0.41668464877653133\n",
+      "第1次迭代后的loss部分梯度为0.3947650728939792\n",
+      "第2次迭代后的loss部分梯度为0.39614143824248094\n",
+      "第3次迭代后的loss部分梯度为0.4036920221903222\n",
+      "第4次迭代后的loss部分梯度为0.41314481820913174\n",
+      "第5次迭代后的loss部分梯度为0.42331589134482717\n",
+      "第6次迭代后的loss部分梯度为0.4337703555918372\n",
+      "第7次迭代后的loss部分梯度为0.4442493542185031\n",
+      "第8次迭代后的loss部分梯度为0.4545474290025685\n",
+      "第9次迭代后的loss部分梯度为0.46449822641563443\n",
+      "第10次迭代后的loss部分梯度为0.47397763260101977\n",
+      "第11次迭代后的loss部分梯度为0.4829031863916269\n",
+      "第12次迭代后的loss部分梯度为0.49122836822549876\n",
+      "第13次迭代后的loss部分梯度为0.49893466334881764\n",
+      "第14次迭代后的loss部分梯度为0.5060238330321158\n",
+      "第15次迭代后的loss部分梯度为0.5125115135247461\n",
+      "第16次迭代后的loss部分梯度为0.5184223447910306\n",
+      "第17次迭代后的loss部分梯度为0.5237864247634645\n",
+      "第18次迭代后的loss部分梯度为0.5286367883078127\n",
+      "第19次迭代后的loss部分梯度为0.5330076412918514\n",
+      "第20次迭代后的loss部分梯度为0.5369331423079942\n",
+      "第21次迭代后的loss部分梯度为0.5404465810361743\n",
+      "第22次迭代后的loss部分梯度为0.5435798446183919\n",
+      "第23次迭代后的loss部分梯度为0.5463630932654394\n",
+      "第24次迭代后的loss部分梯度为0.5488245871285184\n",
+      "第25次迭代后的loss部分梯度为0.5509906212267897\n",
+      "第26次迭代后的loss部分梯度为0.5528855359726854\n",
+      "第27次迭代后的loss部分梯度为0.5545317788741172\n",
+      "第28次迭代后的loss部分梯度为0.5559499991190924\n",
+      "第29次迭代后的loss部分梯度为0.5571591614721045\n",
+      "第30次迭代后的loss部分梯度为0.558176669570646\n",
+      "第31次迭代后的loss部分梯度为0.5590184915416762\n",
+      "第32次迭代后的loss部分梯度为0.559699283037882\n",
+      "第33次迭代后的loss部分梯度为0.5602325044575153\n",
+      "第34次迭代后的loss部分梯度为0.5606305303662817\n",
+      "第35次迭代后的loss部分梯度为0.560904750070687\n",
+      "第36次迭代后的loss部分梯度为0.561065658967999\n",
+      "第37次迭代后的loss部分梯度为0.5611229407740352\n",
+      "第38次迭代后的loss部分梯度为0.5610855410509684\n",
+      "第39次迭代后的loss部分梯度为0.5609617326593728\n",
+      "第40次迭代后的loss部分梯度为0.5607591738708674\n",
+      "第41次迭代后的loss部分梯度为0.5604849599232193\n",
+      "第42次迭代后的loss部分梯度为0.5601456687974424\n",
+      "第43次迭代后的loss部分梯度为0.5597474019609975\n",
+      "第44次迭代后的loss部分梯度为0.55929582076437\n",
+      "第45次迭代后的loss部分梯度为0.5587961791090783\n",
+      "第46次迭代后的loss部分梯度为0.5582533529304365\n",
+      "第47次迭代后的loss部分梯度为0.5576718669631973\n",
+      "第48次迭代后的loss部分梯度为0.5570559191861294\n",
+      "第49次迭代后的loss部分梯度为0.5564094032750427\n",
+      "第50次迭代后的loss部分梯度为0.555735929334282\n",
+      "第51次迭代后的loss部分梯度为0.5550388431248087\n",
+      "第52次迭代后的loss部分梯度为0.5543212439631096\n",
+      "第53次迭代后的loss部分梯度为0.5535860014287257\n",
+      "第54次迭代后的loss部分梯度为0.5528357709889442\n",
+      "第55次迭代后的loss部分梯度为0.5520730086261731\n",
+      "第56次迭代后的loss部分梯度为0.5512999845360811\n",
+      "第57次迭代后的loss部分梯度为0.5505187959517617\n",
+      "第58次迭代后的loss部分梯度为0.5497313791401894\n",
+      "第59次迭代后的loss部分梯度为0.5489395206112898\n",
+      "第60次迭代后的loss部分梯度为0.5481448675763106\n",
+      "第61次迭代后的loss部分梯度为0.5473489376902547\n",
+      "第62次迭代后的loss部分梯度为0.5465531281123774\n",
+      "第63次迭代后的loss部分梯度为0.5457587239187282\n",
+      "第64次迭代后的loss部分梯度为0.5449669059010865\n",
+      "第65次迭代后的loss部分梯度为0.544178757787118\n",
+      "第66次迭代后的loss部分梯度为0.5433952729169844\n",
+      "第67次迭代后的loss部分梯度为0.5426173604118707\n",
+      "第68次迭代后的loss部分梯度为0.5418458508697508\n",
+      "第69次迭代后的loss部分梯度为0.5410815016233608\n",
+      "第70次迭代后的loss部分梯度为0.5403250015945429\n",
+      "第71次迭代后的loss部分梯度为0.5395769757780966\n",
+      "第72次迭代后的loss部分梯度为0.5388379893868798\n",
+      "第73次迭代后的loss部分梯度为0.5381085516883468\n",
+      "第74次迭代后的loss部分梯度为0.5373891195608833\n",
+      "第75次迭代后的loss部分梯度为0.5366801007964155\n",
+      "第76次迭代后的loss部分梯度为0.5359818571737347\n",
+      "第77次迭代后的loss部分梯度为0.5352947073249356\n",
+      "第78次迭代后的loss部分梯度为0.534618929415319\n",
+      "第79次迭代后的loss部分梯度为0.5339547636551438\n",
+      "第80次迭代后的loss部分梯度为0.533302414659582\n",
+      "第81次迭代后的loss部分梯度为0.5326620536715214\n",
+      "第82次迭代后的loss部分梯度为0.5320338206600361\n",
+      "第83次迭代后的loss部分梯度为0.5314178263057976\n",
+      "第84次迭代后的loss部分梯度为0.530814153883223\n",
+      "第85次迭代后的loss部分梯度为0.5302228610478503\n",
+      "第86次迭代后的loss部分梯度为0.5296439815362481\n",
+      "第87次迭代后的loss部分梯度为0.5290775267846739\n",
+      "第88次迭代后的loss部分梯度为0.5285234874718773\n",
+      "第89次迭代后的loss部分梯度为0.5279818349905616\n",
+      "第90次迭代后的loss部分梯度为0.5274525228513831\n",
+      "第91次迭代后的loss部分梯度为0.526935488022797\n",
+      "第92次迭代后的loss部分梯度为0.5264306522095717\n",
+      "第93次迭代后的loss部分梯度为0.5259379230724154\n",
+      "第94次迭代后的loss部分梯度为0.5254571953908124\n",
+      "第95次迭代后的loss部分梯度为0.5249883521709864\n",
+      "第96次迭代后的loss部分梯度为0.524531265700616\n",
+      "第97次迭代后的loss部分梯度为0.5240857985518836\n",
+      "第98次迭代后的loss部分梯度为0.5236518045342546\n",
+      "第99次迭代后的loss部分梯度为0.5232291295983733\n",
+      "第100次迭代后的loss部分梯度为0.5228176126923385\n",
+      "第101次迭代后的loss部分梯度为0.5224170865717301\n",
+      "第102次迭代后的loss部分梯度为0.5220273785645707\n",
+      "第103次迭代后的loss部分梯度为0.5216483112925714\n",
+      "第104次迭代后的loss部分梯度为0.5212797033499308\n",
+      "第105次迭代后的loss部分梯度为0.5209213699409895\n",
+      "第106次迭代后的loss部分梯度为0.5205731234780842\n",
+      "第107次迭代后的loss部分梯度为0.5202347741409243\n",
+      "第108次迭代后的loss部分梯度为0.519906130398877\n",
+      "第109次迭代后的loss部分梯度为0.5195869994975213\n",
+      "第110次迭代后的loss部分梯度为0.5192771879108486\n",
+      "第111次迭代后的loss部分梯度为0.5189765017605437\n",
+      "第112次迭代后的loss部分梯度为0.5186847472036901\n",
+      "第113次迭代后的loss部分梯度为0.5184017307903327\n",
+      "第114次迭代后的loss部分梯度为0.5181272597922658\n",
+      "第115次迭代后的loss部分梯度为0.5178611425044303\n",
+      "第116次迭代后的loss部分梯度为0.5176031885202743\n",
+      "第117次迭代后的loss部分梯度为0.5173532089824049\n",
+      "第118次迭代后的loss部分梯度为0.5171110168098682\n",
+      "第119次迭代后的loss部分梯度为0.5168764269033221\n",
+      "第120次迭代后的loss部分梯度为0.5166492563293557\n",
+      "第121次迭代后的loss部分梯度为0.5164293244851892\n",
+      "第122次迭代后的loss部分梯度为0.516216453244928\n",
+      "第123次迭代后的loss部分梯度为0.5160104670885131\n",
+      "第124次迭代后的loss部分梯度为0.5158111932144771\n",
+      "第125次迭代后的loss部分梯度为0.5156184616375696\n",
+      "第126次迭代后的loss部分梯度为0.515432105272277\n",
+      "第127次迭代后的loss部分梯度为0.5152519600031936\n",
+      "第128次迭代后的loss部分梯度为0.5150778647432283\n",
+      "第129次迭代后的loss部分梯度为0.5149096614804696\n",
+      "第130次迭代后的loss部分梯度为0.514747195314635\n",
+      "第131次迭代后的loss部分梯度为0.5145903144838501\n",
+      "第132次迭代后的loss部分梯度为0.5144388703825592\n",
+      "第133次迭代后的loss部分梯度为0.5142927175712864\n",
+      "第134次迭代后的loss部分梯度为0.5141517137789196\n",
+      "第135次迭代后的loss部分梯度为0.5140157198981861\n",
+      "第136次迭代后的loss部分梯度为0.5138845999749069\n",
+      "第137次迭代后的loss部分梯度为0.5137582211916069\n",
+      "第138次迭代后的loss部分梯度为0.5136364538460456\n",
+      "第139次迭代后的loss部分梯度为0.5135191713251209\n",
+      "第140次迭代后的loss部分梯度为0.5134062500746576\n",
+      "第141次迭代后的loss部分梯度为0.5132975695655115\n",
+      "第142次迭代后的loss部分梯度为0.5131930122563877\n",
+      "第143次迭代后的loss部分梯度为0.5130924635537535\n",
+      "第144次迭代后的loss部分梯度为0.5129958117692353\n",
+      "第145次迭代后的loss部分梯度为0.5129029480747602\n",
+      "第146次迭代后的loss部分梯度为0.5128137664558301\n",
+      "第147次迭代后的loss部分梯度为0.5127281636631358\n",
+      "第148次迭代后的loss部分梯度为0.5126460391628157\n",
+      "第149次迭代后的loss部分梯度为0.512567295085586\n",
+      "第150次迭代后的loss部分梯度为0.51249183617496\n",
+      "第151次迭代后的loss部分梯度为0.5124195697347458\n",
+      "第152次迭代后的loss部分梯度为0.5123504055760535\n",
+      "第153次迭代后的loss部分梯度为0.5122842559639154\n",
+      "第154次迭代后的loss部分梯度为0.5122210355637211\n",
+      "第155次迭代后的loss部分梯度为0.5121606613875924\n",
+      "第156次迭代后的loss部分梯度为0.5121030527408296\n",
+      "第157次迭代后的loss部分梯度为0.5120481311685199\n",
+      "第158次迭代后的loss部分梯度为0.511995820402463\n",
+      "第159次迭代后的loss部分梯度为0.5119460463084367\n",
+      "第160次迭代后的loss部分梯度为0.5118987368339625\n",
+      "第161次迭代后的loss部分梯度为0.5118538219565754\n",
+      "第162次迭代后的loss部分梯度为0.5118112336327085\n",
+      "第163次迭代后的loss部分梯度为0.5117709057472413\n",
+      "第164次迭代后的loss部分梯度为0.5117327740637454\n",
+      "第165次迭代后的loss部分梯度为0.5116967761754938\n",
+      "第166次迭代后的loss部分梯度为0.5116628514572592\n",
+      "第167次迭代后的loss部分梯度为0.5116309410179389\n",
+      "第168次迭代后的loss部分梯度为0.5116009876540211\n",
+      "第169次迭代后的loss部分梯度为0.5115729358039403\n",
+      "第170次迭代后的loss部分梯度为0.5115467315033326\n",
+      "第171次迭代后的loss部分梯度为0.511522322341159\n",
+      "第172次迭代后的loss部分梯度为0.5114996574167985\n",
+      "第173次迭代后的loss部分梯度为0.5114786872980277\n",
+      "第174次迭代后的loss部分梯度为0.5114593639799557\n",
+      "第175次迭代后的loss部分梯度为0.5114416408448716\n",
+      "第176次迭代后的loss部分梯度为0.5114254726230474\n",
+      "第177次迭代后的loss部分梯度为0.5114108153544459\n",
+      "第178次迭代后的loss部分梯度为0.5113976263513662\n",
+      "第179次迭代后的loss部分梯度为0.5113858641620183\n",
+      "第180次迭代后的loss部分梯度为0.51137548853498\n",
+      "第181次迭代后的loss部分梯度为0.5113664603845801\n",
+      "第182次迭代后的loss部分梯度为0.5113587417571631\n",
+      "第183次迭代后的loss部分梯度为0.5113522957982317\n",
+      "第184次迭代后的loss部分梯度为0.5113470867204618\n",
+      "第185次迭代后的loss部分梯度为0.5113430797725582\n",
+      "第186次迭代后的loss部分梯度为0.5113402412089711\n",
+      "第187次迭代后的loss部分梯度为0.5113385382604134\n",
+      "第188次迭代后的loss部分梯度为0.5113379391052009\n",
+      "第189次迭代后的loss部分梯度为0.5113384128413898\n",
+      "第190次迭代后的loss部分梯度为0.5113399294596755\n",
+      "第191次迭代后的loss部分梯度为0.5113424598170697\n",
+      "第192次迭代后的loss部分梯度为0.5113459756113233\n",
+      "第193次迭代后的loss部分梯度为0.5113504493560612\n",
+      "第194次迭代后的loss部分梯度为0.5113558543566454\n",
+      "第195次迭代后的loss部分梯度为0.511362164686731\n",
+      "第196次迭代后的loss部分梯度为0.5113693551654953\n",
+      "第197次迭代后的loss部分梯度为0.5113774013355412\n",
+      "第198次迭代后的loss部分梯度为0.5113862794414336\n",
+      "第199次迭代后的loss部分梯度为0.5113959664088753\n",
+      "准确率： 0.8052434456928839\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "\n",
+    "random.seed(0)\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "trainData = './data/diabetes_train.txt'   #请换为自己文件的路径\n",
+    "testData = './data/diabetes_test.txt'\n",
+    "\n",
+    "def preprocessData(data):\n",
+    "    feature=np.array(data.iloc[:,:-1])   #取特征\n",
+    "    label=data.iloc[:,-1].map(lambda x: 1 if x==1 else -1) #取标签并转化为 +1，-1\n",
+    "    #将数组按行进行归一化\n",
+    "    zmax, zmin = feature.max(axis=0), feature.min(axis=0)\n",
+    "    feature = (feature - zmin) / (zmax - zmin)\n",
+    "    label=np.array(label)\n",
+    "    return feature,label\n",
+    "\n",
+    "def sigmoid(data):\n",
+    "    return 1.0 / (1+np.exp(-data))\n",
+    "\n",
+    "class FM:\n",
+    "    def __init__(self, k=8, learning_rate = 0.005):\n",
+    "        # 隐向量维数\n",
+    "        self.k = k\n",
+    "        # 学习率\n",
+    "        self.learning_rate = learning_rate\n",
+    "\n",
+    "    def fit(self, data, label, iter):\n",
+    "        m, n = data.shape\n",
+    "        # 常数项系数\n",
+    "        self.w0 = 0.0\n",
+    "        #  一次项系数\n",
+    "        # self.w = np.random.normal(size=(n,1))\n",
+    "        self.w = np.zeros((n,1))\n",
+    "        # 二次项系数矩阵，即FM核心思想的隐向量系数矩阵\n",
+    "        # self.v = np.random.normal(size=(n,self.k))\n",
+    "        self.v = random.normalvariate(0, 0.2) * np.ones((n, self.k))\n",
+    "\n",
+    "        for epoch in range(iter):\n",
+    "            # 采用SGD算法求解\n",
+    "            for index in range(m):\n",
+    "                feature = data[index].reshape(-1,1)\n",
+    "                inter_1 = np.sum(feature * self.v, axis=0,keepdims=True)\n",
+    "                inter_2 = np.sum((feature * feature) * (self.v * self.v),axis=0,keepdims=True)\n",
+    "                interaction = np.sum(inter_1 * inter_1 - inter_2, axis=1) / 2.0\n",
+    "                # 预测值\n",
+    "                pred = self.w0 + np.dot(feature.T,self.w) + interaction[0]\n",
+    "                # loss 部分梯度，即loss对sigmoid求导的结果方便后续计算\n",
+    "                loss = 1 - sigmoid(label[index] * pred[0,0])\n",
+    "\n",
+    "                # 分别更新参数\n",
+    "                self.w0 = self.w0 + self.learning_rate * loss * label[index]\n",
+    "                self.w = self.w + self.learning_rate * loss  * label[index] * feature\n",
+    "                self.v = self.v + self.learning_rate * loss * label[index] * (feature * inter_1 -\n",
+    "                                                               (feature * feature) * self.v)\n",
+    "            print(\"第{}次迭代后的loss部分梯度为{}\".format(epoch, loss))\n",
+    "\n",
+    "    def predict(self,data):\n",
+    "        inter_1 = data.dot(self.v)\n",
+    "        inter_2 = (data * data).dot(self.v * self.v)\n",
+    "        interaction = np.sum(inter_1 * inter_1 - inter_2, axis=1) / 2.0\n",
+    "\n",
+    "        # 预测值\n",
+    "        pred = self.w0 +data.dot(self.w) + interaction.reshape(-1,1)\n",
+    "        pred = np.where(pred>0.5, 1, -1)\n",
+    "        return pred\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    train=pd.read_csv(trainData)\n",
+    "    test = pd.read_csv(testData)\n",
+    "    dataTrain, labelTrain = preprocessData(train)\n",
+    "    dataTest, labelTest = preprocessData(test)\n",
+    "\n",
+    "    clf = FM(k=20)\n",
+    "    clf.fit(dataTrain, labelTrain,200)\n",
+    "    res = clf.predict(dataTest)\n",
+    "    prec = res == labelTest.reshape(-1,1)\n",
+    "    print(\"准确率：\", np.sum(prec)/dataTest.shape[0])"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
